solc_ossfuzz_seed_corpus/test_sol/test_dede23f528c47d768159e8426c63652e8e7ce2c698b88333a15ef7a04ac11436_367ad3b5febd80265fed371da70c2e24fbd0d752_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  int240   s0 = int240(-44300537878674463357018989485302378723991373018326626535986618142507661);
  bool   s1;
  constructor(bool i0) payable  {
    s1 = false;
    unchecked {
      (bool l0) = payable(this).send(5400598607786210194);
    }
  }
  receive() external virtual  payable
  {
    if ((bytes3(0x41a0f3) >= bytes3(0xffffff)))
    {
      (bool l0) = payable(this).send(4493387836244977998);
    }
    else if (false)
    {
    }
    payable(this).transfer(18159142313083513543);
    payable(this).transfer(7363790126924325506);
  }
}
pragma solidity >= 0.0.0;
library L0 {
  event ev0();
  modifier m0() 
  {
    _;
  }
  event ev1(uint256  ep0, address  ep1, function (bytes4, bool) internal   indexed ep2) anonymous;
  bytes4 public constant cons0 = bytes4(0xffffffff);
  function f1(bool i0,bool i1,address payable i2) external   
  {
  }
  function f2(int32 i0) external    returns(uint16 o0,bool o1,bytes32 o2)
  {
    unchecked {
    }
  }
}
using L0 for uint;
using L0 for uint;
// ----
// TypeError 3417: (su0.sol:684-730): Internal or recursive type is not allowed as event parameter type.
